change in mobile responsive

--- a/pages/login.html
+++ b/pages/login.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sign In</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
+    <link rel="stylesheet" href="../resourses/css/style.css">
     <style>
         body{
             background-color: #044a75;
@@ -27,14 +28,7 @@
             border-bottom: 1px solid #c0ccda;
             
      }
-     #div-center{
-        width: 35%;
-        margin: auto;
-        /* position: fixed;
-        top: 50%;
-        left: 50%;
-        transform: translate(-50%, -50%); */
-     }
+   
     </style>
 </head>
 <body>
