--- a/common/navbar.html
+++ b/common/navbar.html
@@ -19,7 +19,7 @@
       <nav class="navbar navbar-expand-lg">
         <div class="container-fluid">
             <a class="navbar-brand" href="#">
-                <img src="../resourses/images/logo-color.svg" alt="Bootstrap" width="300" height="40">
+                <img class="logo-image" src="../resourses/images/logo-color.svg" alt="Bootstrap">
               </a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
