--- a/pages/signup.html
+++ b/pages/signup.html
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sign Up</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
+    <link rel="stylesheet" href="../resourses/css/style.css">
+
 <style>
     .navbar-expand-lg .navbar-collapse {
         justify-content: space-around;
@@ -47,6 +49,10 @@
         min-height: 100%;
         object-fit: cover;
      }
+     .signup-logo{
+        height: 10%;
+        padding: 22px;
+     }
 </style>
 </head>
 <body>
@@ -54,7 +60,7 @@
     <div class="row">
         <div class="col-12 col-md-8">
             <a href="../pages/homepage.html">
-                <img class="mt-3" src="../resourses/images/logo-color.svg" alt="Bootstrap" width="300" height="40">
+                <img  class="signup-logo" class="mt-3" src="../resourses/images/logo-color.svg" alt="Bootstrap">
             </a>
             <div class="signup-form-width">
                 <h1>Create your account. No credit card needed.</h1>
