--- a/signup.html
+++ b/signup.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sign Up</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
-    <link rel="stylesheet" href="../resourses/css/style.css">
+    <link rel="stylesheet" href="./resourses/css/style.css">
 
 <style>
     .navbar-expand-lg .navbar-collapse {
@@ -59,12 +59,12 @@
  <div>
     <div class="row">
         <div class="col-12 col-md-8">
-            <a href="../pages/homepage.html">
-                <img  class="signup-logo" class="mt-3" src="../resourses/images/logo-color.svg" alt="Bootstrap">
+            <a href="index.html">
+                <img  class="signup-logo" class="mt-3" src="./resourses/images/logo-color.svg" alt="Bootstrap">
             </a>
             <div class="signup-form-width">
                 <h1>Create your account. No credit card needed.</h1>
-                <p">Send your first emails in a few minutes. Already have an account? <a rel="noreferrer" href="../pages/login.html" target="_self">Login</a></p>
+                <p">Send your first emails in a few minutes. Already have an account? <a rel="noreferrer" href="login.html" target="_self">Login</a></p>
                 <form>
                     <div class="mb-3">
                       <label for="exampleInputEmail1" class="form-label">Email address</label>
